--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="skeleton_app">Temp Switcher</string>
     <string name="back">Back</string>
     <string name="clear">Reset Default</string>
+    <string name="start_message">Sound was switched off</string>
+    <string name="finish_message">Sound was switched on again</string>
 </resources>
 
