First working version. With readme, license and about dialog :)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-  
-          http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
-<!-- This file contains resource definitions for displayed strings, allowing
-     them to be changed based on the locale and options. -->
-
 <resources>
     <!-- Simple strings. -->
-    <string name="skeleton_app">Temp Switcher</string>
-    <string name="back">Back</string>
+    <string name="app_name">TmpSwitcher</string>
+    <string name="back">Quit</string>
     <string name="clear">Reset Default</string>
+    <string name="about">About</string>
     <string name="start_message">Sound was switched off</string>
     <string name="finish_message">Sound was switched on again</string>
+    <string name="about_dialog">This application is intended to give you a simple way to switch off
+your sound for a particular perioud of time (e.g. lecture or business meeting).
+\n
+For more information visit https://github.com/varepsilon/android-temp-switcher</string>
 </resources>
 
